--- a/src/components/module/headerMainLinks/headerMainLinks.module.scss
+++ b/src/components/module/headerMainLinks/headerMainLinks.module.scss
@@ -13,18 +13,9 @@
     // justify-content: flex-end;
   }
 
-  .appointmentBtn {
-    padding: rem(4 0);
-    border-bottom: rem(1) solid getColorHex("green-dark");
-    color: getColorHex("green-dark");
+  span.appointmentBtn {
     max-width: rem(250);
-    cursor: pointer;
-    @include body_regular;
-    font-size: rem(14);
-    line-height: rem(18);
-    letter-spacing: rem(1);
-    text-transform: uppercase;
-
+    text-underline-offset: rem(10);
     @include breakpoint-max-width(rem(1150)) {
       display: none;
     }
@@ -49,6 +40,7 @@
       line-height: rem(20);
       letter-spacing: rem(0.4);
       text-transform: uppercase;
+      margin-top: rem(9);
 
       &::after {
         margin-top: rem(7);
