--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -8,8 +8,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: getColorHex("plumeria-tint");
-  color: getColorHex("green-palm");
+  background-color: getColorHex("tint-broze");
+  color: getColorHex("midnight-brown");
 
   h1 {
     font-size: rem(65);
@@ -22,6 +22,7 @@
     font-size: rem(14);
     line-height: rem(18);
     text-align: center;
+    margin-bottom: rem(28);
   }
 }
 
