added collections tab list component

--- a/src/components/module/mobileHeader/mobileHeader.module.scss
+++ b/src/components/module/mobileHeader/mobileHeader.module.scss
@@ -9,3 +9,9 @@
   height: rem(120);
   transition: all 0.3s ease-in-out;
 }
+
+.tabNavigation {
+  margin-top: rem(36);
+  width: 100%;
+  padding: 0 rem(28);
+}
