--- a/src/components/rendering/twoColumnImageCopy/twoColumnImageCopy.module.scss
+++ b/src/components/rendering/twoColumnImageCopy/twoColumnImageCopy.module.scss
@@ -1,49 +1,64 @@
 @import "./../../../assets/styles/main.scss";
 
 .container {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, rem(502));
-  justify-content: center;
+  // display: grid;
+  // grid-template-columns: repeat(auto-fit, rem(502));
+  // justify-content: center;
+  display: flex;
+  flex-wrap: wrap;
   text-align: center;
   margin: rem(80 0);
-  gap: rem(120);
+  gap: rem(32);
+  width: 100%;
+  justify-content: center;
+  
+  @include md {
+    gap: rem(120);
 
-  // grid-row-end: span 2;
-  // grid-column-end: span 1;
-
-  [dir="rtl"] & { 
-    text-align: right;
   }
 
-  // @include md {
-  //   grid-row-end: span 2;
-  //   grid-column-end: span 3;
-  // }
-  // @include lg {
-  //   grid-row-end: span 2;
-  //   grid-column-end: span 4;
-  // }
+
+  [dir="rtl"] & {
+    text-align: right;
+  }
 
   .columnOne,
   .columnTwo {
     display: flex;
+    margin: 0 rem(32);
     flex-direction: column;
     gap: rem(60);
+    overflow: hidden;
+    border-radius: rem(16) 0 rem(16) 0;
+    max-width: rem(502);
+
+    @include md {
+      margin: 0;
+    }
+
+
     .columnContent {
       display: flex;
       flex-direction: column;
       gap: rem(24);
       align-items: center;
 
-      [dir="rtl"] & { 
+      [dir="rtl"] & {
         align-items: flex-start;
       }
     }
     .image {
       border-radius: rem(16 0);
       object-fit: cover;
-      width: rem(502);
-      height: rem(700);
+      // width: 100%;
+      height: rem(448);
+      border-radius: rem(16) 0 rem(16) 0;
+
+      @include md {
+        padding: 0;
+        width: rem(502);
+        height: rem(700);
+      }
     }
   }
 }
@@ -59,6 +74,18 @@
   letter-spacing: rem(0.4);
   color: getColorHex("green-dark");
   @include body_regular;
+}
+
+.titleColor {
+  color: getColorHex("green-dark");
+}
+
+.subTitleColor {
+  color: getColorHex("green-dark");
+}
+
+.barColor {
+  background: getColorHex("metallic");
 }
 
 .desc {
