--- a/src/components/module/cards/collectionsCard/collectionsCard.module.scss
+++ b/src/components/module/cards/collectionsCard/collectionsCard.module.scss
@@ -34,6 +34,8 @@
 
 .item {
   position: relative;
+  border: rem(1) solid getColorHex("grey-light-4", 0.4);
+
 
   .itemContent {
     position: absolute;
