--- a/src/components/rendering/collectionsTabList/collectionsTabList.module.scss
+++ b/src/components/rendering/collectionsTabList/collectionsTabList.module.scss
@@ -44,3 +44,39 @@
     margin-bottom: rem(20);
   }
 }
+
+
+.containerSlider {
+  padding: rem(0 0 0 28);
+  display: flex;
+  flex-direction: column;
+  gap: rem(32);
+
+  width: 100%;
+}
+
+.mySwiper {
+  margin: rem(28);
+  margin: 0;
+}
+
+.containerGrid {
+  padding: 0 rem(60);
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  gap: rem(40);
+
+  .containerGridItems {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(rem(360), 1fr));
+    width: 100%;
+
+    @include md {
+      max-width: rem(1082);
+      // margin: 0 auto;
+    }
+  }
+}
