--- a/src/components/rendering/quoteBlock/quoteBlock.module.scss
+++ b/src/components/rendering/quoteBlock/quoteBlock.module.scss
@@ -19,27 +19,69 @@
 
 .logo {
   margin-bottom: rem(20);
+  min-height: rem(20);
+
   img {
     max-width: rem(100);
     height: auto;
+  }
+
+  .logoPlaceholder {
+    height: rem(20);
   }
 }
 
 .richTextContainer {
   position: relative;
   margin-bottom: rem(20);
+  width: 100%;
 }
 
 .richText {
   @include heading_light;
-  margin-bottom: rem(20);
   font-size: rem(22);
   color: getColorHex("green-dark");
   position: relative;
   text-align: center;
 
+  span {
+    margin: rem(15);
+    @include md {
+      margin: rem(40);
+    }
+  }
+
   @include md {
     font-size: rem(32);
+  }
+
+  &:before,
+  &:after {
+    content: "“";
+    position: absolute;
+    font-size: rem(40);
+    color: getColorHex("chocolate-brown");
+    @include md {
+      font-size: rem(80);
+    }
+  }
+
+  &:before {
+    top: rem(5);
+    left: rem(25);
+
+    transform: translate(-100%, -50%);
+    @include md {
+      top: rem(35);
+      left: rem(45);
+    }
+  }
+
+  &:after {
+    bottom: rem(-25);
+    right: rem(45);
+    transform: translate(100%, 50%);
+    content: "”";
   }
 }
 
