--- a/src/components/rendering/imageQuoteBlock/imageQuoteBlock.module.scss
+++ b/src/components/rendering/imageQuoteBlock/imageQuoteBlock.module.scss
@@ -1,19 +1,43 @@
 @import "./../../../assets/styles/main.scss";
 
-.quoteCarouselContainer {
-  width: 100%;
+.imageQuoteBlockContainer {
+  display: flex;
+  align-items: center;
   padding: rem(60) rem(28);
   margin: 0 auto;
-  position: relative;
   width: auto;
-
-  @include xl {
+  flex-direction: column;
+  @include lg {
     padding: rem(100);
+  }
+  @include xl {
     width: rem(1440);
+    flex-direction: row;
   }
 }
 
-.quoteBlockContainer {
+.imageContainer {
+  margin-right: rem(0);
+  margin-bottom: rem(28);
+  @include xl {
+    margin-right: rem(108);
+    margin-bottom: rem(0);
+  }
+  img {
+    height: rem(338);
+    width: 100%;
+    object-fit: cover;
+    border-top-left-radius: rem(8);
+    border-bottom-right-radius: rem(8);
+    @include xl {
+      height: rem(500);
+      width: rem(500);
+    }
+  }
+}
+
+.quoteContentContainer {
+  flex: 1;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -21,22 +45,26 @@
 }
 
 .logo {
-  margin-bottom: rem(20);
-  min-height: rem(20);
+  width: rem(100);
+  height: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
   img {
-    max-width: rem(100);
+    max-width: 100%;
     height: auto;
   }
 
   .logoPlaceholder {
-    height: rem(20);
+    width: rem(100);
+    height: rem(100);
+    background-color: getColorHex("light-grey");
   }
 }
 
 .richTextContainer {
   position: relative;
-  margin-bottom: rem(20);
   width: 100%;
 }
 
@@ -46,16 +74,11 @@
   color: getColorHex("green-dark");
   position: relative;
   text-align: center;
+  margin: rem(34) 0 rem(20) 0;
 
-  span {
-    margin: rem(15);
-    @include md {
-      margin: rem(40);
-    }
-  }
-
-  @include md {
+  @include lg {
     font-size: rem(32);
+    margin: rem(40) 0 rem(20) 0;
   }
 
   &:before,
@@ -64,58 +87,50 @@
     position: absolute;
     font-size: rem(40);
     color: getColorHex("chocolate-brown");
-    @include md {
+    @include lg {
       font-size: rem(80);
     }
   }
 
   &:before {
-    top: rem(5);
-    left: rem(25);
-
+    top: rem(20);
+    left: rem(15);
     transform: translate(-100%, -50%);
-    @include md {
-      top: rem(35);
+    content: "“";
+    @include lg {
       left: rem(45);
     }
   }
 
   &:after {
-    bottom: rem(-25);
+    bottom: rem(-35);
     right: rem(45);
     transform: translate(100%, 50%);
     content: "”";
+    @include lg {
+      bottom: rem(-15);
+    }
   }
 }
 
 .nameSource {
-  @include heading_light;
-  font-size: rem(16);
+  @include heading_light_italic;
+  font-size: rem(20);
   margin-bottom: rem(8);
   color: getColorHex("grey");
   h5 {
     margin: 0;
   }
-  @include md {
-    font-size: rem(20);
-  }
 }
 
 .nameDesignation {
   @include body_light;
-  font-size: rem(12);
+  font-size: rem(10);
   color: getColorHex("grey");
   p {
     margin: 0;
   }
-  @include md {
+  @include lg {
     font-size: rem(14);
   }
-}
-
-.carouselBtnsContainer {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-top: rem(40);
 }
