--- a/src/components/rendering/twoColumnFullScreenImage/twoColumnFullScreenImage.module.scss
+++ b/src/components/rendering/twoColumnFullScreenImage/twoColumnFullScreenImage.module.scss
@@ -20,6 +20,7 @@
   display: grid;
   grid-template-columns: repeat(1, 1fr);
   justify-content: center;
+  gap: rem(1);
   
   @include md {
     grid-template-columns: repeat(2, 1fr);
