added boutique banner

--- a/src/assets/styles/partials/_variables.scss
+++ b/src/assets/styles/partials/_variables.scss
@@ -15,6 +15,8 @@ $colors: (
   "green-greyish": #f2f4f2,
   "green-greyish-light": #dadeda,
   "noir": #513629,
+  "cream": #FAF5ED,
+
 
   "grey": #403f3d,
   "grey-dark": #282828,
@@ -24,6 +26,7 @@ $colors: (
   "grey-light-3": #e9e6e3,
   "grey-light-4": #d2cbc2,
   "grey-light-5": #CCCBC7,
+  "grey-light-6": #edefed,
   "grey-tint": #f6f5f2,
 
   "blue": #0033a0,
@@ -38,6 +41,7 @@ $colors: (
   "white": #ffffff,
   "black": #180d22,
   "black-dark": #000000,
+  "black-light": #4B4B4B,
   "yellow": #ffc72c,
 
   "orange": #faab51,
