--- a/src/components/rendering/boutiqueBanner/boutiqueBanner.module.scss
+++ b/src/components/rendering/boutiqueBanner/boutiqueBanner.module.scss
@@ -51,7 +51,7 @@
 }
 
 .contentContainer {
-  flex: 1; // Take up the other half of the container width
+  flex: 1;  
   display: flex;
   flex-direction: column;
   align-items: flex-start;
