added video support

--- a/src/components/rendering/boutiqueBanner/boutiqueBanner.module.scss
+++ b/src/components/rendering/boutiqueBanner/boutiqueBanner.module.scss
@@ -35,23 +35,24 @@
   }
 }
 
-.imageContainer {
+.mediaContainer {
   flex: 1;
   margin-bottom: rem(32);
 
-  img {
+  img,
+  video {
     width: 100%;
     height: 100%;
     object-fit: cover;
     border-radius: rem(8) rem(0) rem(8) rem(0);
-    @include lg {
-      margin-bottom: rem(0);
-    }
+  }
+  @include lg {
+    margin-bottom: rem(0);
   }
 }
 
 .contentContainer {
-  flex: 1;  
+  flex: 1;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
