--- a/src/components/rendering/boutiqueBanner/boutiqueBanner.module.scss
+++ b/src/components/rendering/boutiqueBanner/boutiqueBanner.module.scss
@@ -30,7 +30,7 @@
 
   .innerContainer {
     width: 100%;
-    max-width: 1440px;
+    max-width: rem(1440);
     display: flex;
     flex-direction: column;
     align-items: center;
