--- a/src/components/module/cards/productCard/productCard.module.scss
+++ b/src/components/module/cards/productCard/productCard.module.scss
@@ -1,7 +1,7 @@
 @import "./../../../../assets/styles/main.scss";
 
 .productContainer {
-  min-width: rem(348);
+  // min-width: rem(348);
   height: rem(596);
   background-color: getColorHex("white");
   padding: rem(16);
@@ -26,10 +26,14 @@
     justify-content: space-between;
     position: absolute;
     width: 100%;
-    padding: rem(16);
+    // padding: rem(16);
     left: 0;
     top: 0;
     z-index: 100;
+
+    svg {
+      margin: rem(16);
+    }
   }
 
   .newContainer {
@@ -39,6 +43,7 @@
     gap: rem(10);
     border-radius: rem(4);
     cursor: pointer;
+    margin: rem(16);
 
     .new {
       font-size: rem(10);
