--- a/src/components/rendering/brandBanner/brandBanner.module.scss
+++ b/src/components/rendering/brandBanner/brandBanner.module.scss
@@ -6,6 +6,7 @@
   width: 100%;
   height: auto;
   position: relative;
+  background-color: getColorHex("cream");
   flex-direction: column;
 
   @include xl {
@@ -17,13 +18,31 @@
 .textContainer {
   flex: 1;
   display: flex;
-  justify-content: flex-end;
-  padding-right: rem(0);
-  padding-top: rem(40);
+  justify-content: flex-end; 
+  padding: rem(60 28 40);
+  position: relative; 
 
   @include xl {
-    padding-right: rem(100);
-    padding-top: rem(0);
+    padding: rem(0 100 0 0); 
+  }
+}
+
+.brandBannerIcon {
+  position: absolute;
+  left: rem(-40); 
+  top: rem(10); 
+  width: rem(80); 
+  height: auto;
+  svg{
+    height: rem(300);
+  }
+
+  @include xl {
+    top: 50%;
+    transform: translateY(-50%); 
+    svg{
+      height: auto;
+    }
   }
 }
 
@@ -36,42 +55,42 @@
 .title {
   p {
     @include heading_regular_italic;
-    font-size: rem(40);
+    font-size: rem(32);
     color: getColorHex("green-dark");
     margin-bottom: rem(16);
     text-align: center;
 
     @include xl {
       text-align: left;
+      font-size: rem(40);
     }
   }
 }
 
 .richTextContainer {
   @include body_italic;
-  font-size: rem(18);
-  color: getColorHex("green-dark");
-  margin-bottom: rem(24);
+  font-size: rem(16);
+  color: getColorHex("green-dark"); 
   word-break: break-all;
   text-align: center;
-  div {
 
+  .richTextContainer > div {
     text-align: center;
-      
-        }
-  @include xl {
-    div {
 
-text-align: left;
-  
+    @include xl {
+      text-align: left;
     }
   }
 
-  
+  @include xl {
+    font-size: rem(18);
+    text-align: left;
+  }
 }
 
 .imageContainer {
   flex: 1;
+
   img {
     width: 100%;
     height: 100%;
@@ -79,6 +98,7 @@ text-align: left;
   }
 
   @include xl {
-    margin-bottom: rem(0); // Remove bottom margin on larger screens
+    margin-bottom: rem(0);
   }
 }
+
