--- a/src/components/rendering/heroBanner/heroBanner.module.scss
+++ b/src/components/rendering/heroBanner/heroBanner.module.scss
@@ -54,7 +54,7 @@
 
     @include md {
       padding: rem(80);
-      width: 60%;
+      width: 50%;
     }
 
     &.bottomPadding {
@@ -81,14 +81,14 @@
       right: 0;
       transform: translateY(-50%);
       text-align: right;
-      align-items: flex-end;
+      align-items: start;
     }
 
     &.right-bottom {
       bottom: 0;
       right: 0;
       text-align: right;
-      align-items: flex-end;
+      align-items: start;
     }
 
     &.center-center {
@@ -97,6 +97,9 @@
       transform: translate(-50%, -50%);
       text-align: center;
       align-items: center;
+      @include md { 
+        width: 65%;
+      }
     }
 
     &.center-bottom {
