--- a/src/components/rendering/footer/footer.module.scss
+++ b/src/components/rendering/footer/footer.module.scss
@@ -9,6 +9,7 @@
   @include md {
     padding: rem(0 60 0 60);
   }
+
   .container {
     display: grid;
     grid-template-columns: 1fr;
@@ -46,7 +47,6 @@
 
   .column {
     display: grid;
-    // grid-template-columns: repeat(2, 1fr);
     gap: rem(20);
     flex-direction: column;
 
@@ -58,6 +58,7 @@
         height: rem(30);
       }
     }
+
     span {
       cursor: pointer;
     }
@@ -65,14 +66,13 @@
     @include md {
       display: flex;
       flex-direction: column;
-      gap: rem(36);
+      gap: rem(48);
     }
 
     .selection {
       display: flex;
       flex-direction: column;
       gap: rem(10);
-      // margin-top: rem(20);
     }
 
     .label {
@@ -112,8 +112,8 @@
       margin-bottom: rem(0);
     }
   }
+
   .column[style*="links3"] {
-    // grid-template-columns: repeat(2, 1fr);
     grid-template-rows: auto auto;
     grid-auto-flow: row dense;
     @include body_light;
@@ -127,9 +127,8 @@
       margin-top: 0;
     }
   }
-  .column[style*="links2"] {
-    // margin-top: rem(20);
 
+  .column[style*="links2"] {
     @include md {
       margin-top: 0;
     }
@@ -183,6 +182,15 @@
     @include md {
       margin-top: 0;
       gap: rem(16);
+    }
+  }
+
+  .newsletter {
+    margin-top: rem(20);
+    text-align: left;
+
+    @include md {
+      margin-top: rem(40);
     }
   }
 }
