--- a/src/components/rendering/highlightedProductCarousel/highlightedProductCarousel.module.scss
+++ b/src/components/rendering/highlightedProductCarousel/highlightedProductCarousel.module.scss
@@ -2,9 +2,9 @@
 
 // Variables
 $mobile-margin: rem(60 32);
-$desktop-margin: rem(120 0);
+$desktop-margin: rem(120 32);
 $mobile-gap: rem(40);
-$desktop-gap: rem(160);
+$desktop-gap: rem(10);
 $product-gap: rem(28);
 $border-radius: rem(12 0 12 0);
 
@@ -21,16 +21,24 @@ $border-radius: rem(12 0 12 0);
 }
 
 // Main container
+
 .container {
-  @include flex-center;
+  display: flex;
+  justify-content: center;
   margin: $mobile-margin;
+}
+.containerContent {
+  @include flex-center;
   flex-direction: column;
   gap: $mobile-gap;
+  width: 100%;
   
   @include lg {
     gap: $desktop-gap;
     margin: $desktop-margin;
     flex-direction: row;
+    width: rem(1085);
+    justify-content: space-between;
   }
 }
 
@@ -80,7 +88,7 @@ $border-radius: rem(12 0 12 0);
   position: relative;
   width: 100%;
   height: rem(400);
-  background-color: getColorHex("grey-light-4");
+  // background-color: getColorHex("grey-light-4");
   border-radius: $border-radius;
   overflow: hidden;
   
