--- a/src/assets/styles/partials/_variables.scss
+++ b/src/assets/styles/partials/_variables.scss
@@ -73,6 +73,8 @@ $colors: (
   "black-with-opacity": #180d221f,
   "steel-gray": #746e7a,
   "success": #1e955d,
+
+  "desert-storm": #eee7db 
 ) !default;
 
 // animations
