image quote block new changes

--- a/src/components/rendering/imageQuoteBlock/imageQuoteBlock.module.scss
+++ b/src/components/rendering/imageQuoteBlock/imageQuoteBlock.module.scss
@@ -134,7 +134,7 @@
 }
 
 .nameSource {
-  @include heading_regular_italic;
+  @include heading_light_italic;
   font-size: rem(20);
   margin-bottom: rem(8);
   color: getColorHex("grey");
