added bgcolor ability in quoteblock

--- a/src/assets/styles/partials/_variables.scss
+++ b/src/assets/styles/partials/_variables.scss
@@ -16,6 +16,7 @@ $colors: (
   "green-greyish-light": #dadeda,
   "noir": #513629,
   "cream": #FAF5ED,
+  "light-cream": #FAF5ED66,
 
 
   "grey": #403f3d,
