collections list rework

--- a/src/components/module/cards/collectionsCard/collectionsCard.module.scss
+++ b/src/components/module/cards/collectionsCard/collectionsCard.module.scss
@@ -52,6 +52,8 @@
 .item {
   position: relative;
   border: rem(1) solid getColorHex("grey-light-4", 0.4);
+  z-index: 100;
+
 
   .itemContent,
   .productContent {
