--- a/src/components/rendering/collectionsTabList/collectionsTabList.module.scss
+++ b/src/components/rendering/collectionsTabList/collectionsTabList.module.scss
@@ -1,7 +1,7 @@
 @import "./../../../assets/styles/main.scss";
 
 .container {
-  margin: rem(60 0);
+  padding: rem(60 0);
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -11,7 +11,7 @@
   }
 
   @include md {
-    margin: rem(120 0);
+    padding: rem(120 0);
   }
 }
 
