--- a/src/components/module/desktopHeader/header.module.scss
+++ b/src/components/module/desktopHeader/header.module.scss
@@ -28,28 +28,36 @@
       height: 0;
       opacity: 0;
       visibility: hidden;
+      margin-top: rem(-3);
     }
   }
 
+  .headerScrolled {
+    margin: rem(0);
+  }
+
   .headerMargin {
-    padding: rem(28 0);
+    // padding: rem(28 0);
     border-bottom: rem(1) solid getColorHex("grey-light");
     margin: rem(0 40);
     height: 100%;
     display: flex;
     flex-direction: column;
-    gap: rem(22);
+    // gap: rem(22);
     transition: all 0.3s;
+    // margin: rem(36 40 24 40);
+    justify-content: space-evenly;
   }
 }
 
 .headerLogoContainer {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
   width: 100%;
   display: flex;
   align-items: center;
-  height: rem(46);
   transition: all 0.3s ease;
+  justify-content: center;
+
+  .mainLogo {
+    height: rem(22);
+  }
 }
