--- a/src/components/module/sumMenuLinks/subMenuLinks.module.scss
+++ b/src/components/module/sumMenuLinks/subMenuLinks.module.scss
@@ -20,3 +20,14 @@
   color: getColorHex("green-dark");
   cursor: pointer;
 }
+
+.label {
+  color:getColorHex("grey-mid");
+  @include body_regular;
+  font-size: rem(14);
+  font-style: normal;
+  line-height: rem(22);
+  letter-spacing: rem(0.4);
+  text-transform: uppercase;
+  margin-bottom: rem(28);
+}
