--- a/src/components/module/productZoom/productZoom.module.scss
+++ b/src/components/module/productZoom/productZoom.module.scss
@@ -25,10 +25,13 @@
   .swiperSlide {
     height: 70vh;
     width: 100vw;
+    position: relative;
 
     .image {
-      height: 70vh;
-      object-fit: cover;
+      width: 100%;
+      height: 100%;
+      // height: 70vh;
+      object-fit: contain;
     }
   }
 
@@ -44,6 +47,7 @@
       cursor: pointer;
       overflow: hidden;
       border: rem(1) solid getColorHex("grey-mid", 0);
+      position: relative;
 
       @include md {
         width: rem(90);
@@ -64,6 +68,7 @@
 
     .activeImage {
       border: rem(1) solid getColorHex("grey-mid", 1);
+      opacity: 0.4;
     }
   }
 }
@@ -78,5 +83,54 @@
   @include md {
     right: rem(40);
     top: rem(80);
+  }
+}
+
+.sliderBtns {}
+
+.leftBtn,
+.rightBtn {
+  width: rem(40);
+  height: rem(40);
+  border-radius: rem(12) 0 rem(12);
+  border-radius: 40px;
+  background: rgba(197, 181, 163, 0.6);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  position: absolute;
+  z-index: 2000;
+  top: 50%;
+  transform: translateY(-50%);
+
+  .arrowLeft {
+    transform: rotate(180deg);
+  }
+}
+.leftBtn {
+  left: rem(50);
+}
+.rightBtn {
+  right: rem(50);
+}
+
+
+.slideBtns {
+
+  display: flex;
+  gap: rem(4);
+  
+
+
+  .slideItem {
+    width: rem(28);
+    height: rem(2);
+    background: var(--GreyShades-Light-Grey, #CCCBC7);
+    cursor: pointer;
+  }
+
+  .slideActive {
+    background: var(--Primary-Metallic, #A98E76);
   }
 }
