--- a/src/components/module/desktopHeader/header.module.scss
+++ b/src/components/module/desktopHeader/header.module.scss
@@ -1,7 +1,7 @@
 @import "./../../../assets/styles/main.scss";
 
 .headerContainer {
-  height: rem(156);
+  height: rem(152);
   background-color: getColorHex("white");
   position: fixed;
   width: 100%;
@@ -37,15 +37,12 @@
   }
 
   .headerMargin {
-    // padding: rem(28 0);
     border-bottom: rem(1) solid getColorHex("grey-light");
     margin: rem(0 40);
     height: 100%;
     display: flex;
     flex-direction: column;
-    // gap: rem(22);
     transition: all 0.3s;
-    // margin: rem(36 40 24 40);
     justify-content: space-evenly;
   }
 }
@@ -56,6 +53,7 @@
   align-items: center;
   transition: all 0.3s ease;
   justify-content: center;
+  margin-top: rem(20);
 
   .mainLogo {
     height: rem(22);
