--- a/src/components/module/headerMainLinks/headerMainLinks.module.scss
+++ b/src/components/module/headerMainLinks/headerMainLinks.module.scss
@@ -8,7 +8,7 @@
   padding: 0;
   margin: 0;
 
-  @include breakpoint-max-width(rem(1150)) {
+  @include breakpoint-max-width(rem(1400)) {
     flex-direction: column;
     // justify-content: flex-end;
   }
@@ -16,7 +16,7 @@
   span.appointmentBtn {
     max-width: rem(250);
     text-underline-offset: rem(10);
-    @include breakpoint-max-width(rem(1150)) {
+    @include breakpoint-max-width(rem(1400)) {
       display: none;
     }
   }
@@ -68,7 +68,7 @@
     align-items: center;
     gap: rem(28.2);
 
-    @include breakpoint-max-width(rem(1150)) {
+    @include breakpoint-max-width(rem(1400)) {
       display: none;
     }
 
@@ -82,6 +82,12 @@
   display: flex;
   align-items: center;
   gap: rem(12);
+  min-width: rem(180);
+  display: none;
+
+  @include xl {
+    display: block;
+  }
 
   .patakLogo {
     width: rem(78.65);
